src/objects/Constructora__c.object
<CustomObject>
    <fields>
        <fullName>Bloqueo_para_desembolso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bloqueo para desembolso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cedula_de_ciudadania__c</fullName>
        <label>Cédula de ciudadanía</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ciudad__c</fullName>
        <label>Ciudad</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Zona__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bogotá</fullName>
                </value>
                <value>
                    <fullName>Medellín</fullName>
                </value>
                <value>
                    <fullName>Barranquilla</fullName>
                </value>
                <value>
                    <fullName>Bucaramanga</fullName>
                </value>
                <value>
                    <fullName>Cali</fullName>
                </value>
                <value>
                    <fullName>Pereira</fullName>
                </value>
                <value>
                    <fullName>Soacha</fullName>
                </value>
                <value>
                    <fullName>Funza</fullName>
                </value>
                <value>
                    <fullName>Mosquera</fullName>
                </value>
                <value>
                    <fullName>Madrid</fullName>
                </value>
                <value>
                    <fullName>Facatativá</fullName>
                </value>
                <value>
                    <fullName>Zipaquirá</fullName>
                </value>
                <value>
                    <fullName>Cajicá</fullName>
                </value>
                <value>
                    <fullName>Tocancipá</fullName>
                </value>
                <value>
                    <fullName>Gachancipá</fullName>
                </value>
                <value>
                    <fullName>Cota</fullName>
                </value>
                <value>
                    <fullName>Chia</fullName>
                </value>
                <value>
                    <fullName>Sopó</fullName>
                </value>
                <value>
                    <fullName>Sibaté</fullName>
                </value>
                <value>
                    <fullName>Dosquebradas</fullName>
                </value>
                <value>
                    <fullName>Santa Rosa de Cabal</fullName>
                </value>
                <value>
                    <fullName>Cartago</fullName>
                </value>
                <value>
                    <fullName>Palmira</fullName>
                </value>
                <value>
                    <fullName>Yumbo</fullName>
                </value>
                <value>
                    <fullName>Jamundí</fullName>
                </value>
                <value>
                    <fullName>Candelaria</fullName>
                </value>
                <value>
                    <fullName>Santander de Quilichao</fullName>
                </value>
                <value>
                    <fullName>Bello</fullName>
                </value>
                <value>
                    <fullName>Sabaneta</fullName>
                </value>
                <value>
                    <fullName>Envigado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Codigo__c</fullName>
        <externalId>true</externalId>
        <label>Código</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consecutivo__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Consecutivo</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contacto_tramites__c</fullName>
        <label>Contacto trámites</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detalle_de_la_solicitud__c</fullName>
        <label>Detalle de la solicitud</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direccion__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_mail__c</fullName>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Estado_de_aprobacion_Riegos__c</fullName>
        <label>Estado de aprobación Riegos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solicitud de aprobación</fullName>
                    <default>true</default>
                    <label>Solicitud de aprobación</label>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>Bloqueado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experiencia__c</fullName>
        <label>Experiencia (Antigüedad en años)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nit__c</fullName>
        <externalId>true</externalId>
        <label>Nit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Viviendas_ultimos_5_anos__c</fullName>
        <label>No Viviendas últimos 5 años</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_vendedor__c</fullName>
        <label>Nombre vendedor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_viviendas_en_curso__c</fullName>
        <label>Número de viviendas en curso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pagina_web__c</fullName>
        <label>Página web</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propietario__c</fullName>
        <formula>Owner:User.FirstName&amp;&quot;&quot;&amp;Owner:User.MiddleName&amp;&quot;&quot;&amp;Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Representantel_legal__c</fullName>
        <label>Representantel legal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitud_al_Gerente_Comercial__c</fullName>
        <label>Solicitud al Gerente Comercial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solicitud</fullName>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Devuelta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <label>Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <label>Video</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zona__c</fullName>
        <label>Zona</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bogotá</fullName>
                </value>
                <value>
                    <fullName>Antioquia</fullName>
                </value>
                <value>
                    <fullName>Costa Atlántica</fullName>
                </value>
                <value>
                    <fullName>Santander</fullName>
                </value>
                <value>
                    <fullName>Valle</fullName>
                </value>
                <value>
                    <fullName>Eje Cafetero</fullName>
                </value>
                <value>
                    <fullName>Alrededores de Bogotá</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Una_solicitud_aprobada_no_puede_ser_modi</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
ISPICKVAL ( Estado_de_aprobacion_Riegos__c , &quot;Aprobado&quot;), 
 $UserRole.Id  &lt;&gt; &quot;00eo0000000TzBZ&quot;, 
OR (
   ISCHANGED( Name),
   ISCHANGED( Zona__c ),
   ISCHANGED( Ciudad__c ),
   ISCHANGED( Nit__c ),
   ISCHANGED( Direccion__c ),
   ISCHANGED( Telefono__c ),
   ISCHANGED( Fax__c ),
   ISCHANGED( E_mail__c ),
   ISCHANGED( Experiencia__c ),
   ISCHANGED( No_Viviendas_ultimos_5_anos__c ),
   ISCHANGED( Numero_de_viviendas_en_curso__c ),
   ISCHANGED( Solicitud_al_Gerente_Comercial__c ),
   ISCHANGED( Estado_de_aprobacion_Riegos__c ),
   ISCHANGED( Detalle_de_la_solicitud__c ),
   ISCHANGED( Observaciones__c ),
   ISCHANGED( Nombre_vendedor__c ),
   ISCHANGED( Representantel_legal__c ),
   ISCHANGED( Cedula_de_ciudadania__c ),
   ISCHANGED( Contacto_tramites__c ),
   ISCHANGED( Pagina_web__c )
))</errorConditionFormula>
        <errorMessage>CON-04 Una solicitud aprobada no puede ser modificada. Solo el Vicepresidente de Riesgos puede realizar esta acción.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_actualizacion_solicitud_a_gerente</fullName>
        <active>true</active>
        <description>Valida que solo el gerente comercial pueda actualizar los valores devuelta y aprobado en el campo solicitud al gerente comercial</description>
        <errorConditionFormula>AND ( 
$Profile.Name &lt;&gt; &quot;Gerente Comercial&quot;, 

OR ( 
ISPICKVAL (  Solicitud_al_Gerente_Comercial__c , &quot;Aprobada&quot;), 
ISPICKVAL (  Solicitud_al_Gerente_Comercial__c, &quot;Devuelta&quot;) 
))</errorConditionFormula>
        <errorDisplayField>Solicitud_al_Gerente_Comercial__c</errorDisplayField>
        <errorMessage>CON-02  Con su perfil no puede aprobar o devolver solicitudes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_registro_de_observaciones</fullName>
        <active>true</active>
        <description>Cuando la solicitud se encuentra en Devuelta, se requiere el registro de la observación</description>
        <errorConditionFormula>AND ( 
 ISPICKVAL( Solicitud_al_Gerente_Comercial__c , &quot;Devuelta&quot;), 
   ISBLANK( Observaciones__c ))</errorConditionFormula>
        <errorDisplayField>Observaciones__c</errorDisplayField>
        <errorMessage>CON-01 Para registrar la solicitud con la opción devuelta, debe escribir una observación, explicando el motivo de la devolución.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_registro_numero_Nit</fullName>
        <active>true</active>
        <description>Valida que le Nit sea  Numérico</description>
        <errorConditionFormula>NOT ISNUMBER(  Nit__c  )</errorConditionFormula>
        <errorDisplayField>Nit__c</errorDisplayField>
        <errorMessage>CON-03 El campo Nit es solo numérico</errorMessage>
    </validationRules>
</CustomObject>